force-app/main/default/objects/Share_Log__c/Share_Log__c.object-meta.xml
<CustomObject>
    <label>共享日志</label>
    <nameField>
        <displayFormat>SL-{YYYYMMDD}-{00000000}</displayFormat>
        <label>共享日志编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>共享日志</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>