force-app/main/default/objects/Share_Log__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <label>参数(List&lt;sObject&gt;)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>