force-app/main/default/objects/Share_Log__c/fields/Row_Cause__c.field-meta.xml
<CustomField>
    <fullName>Row_Cause__c</fullName>
    <label>原因</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>