force-app/main/default/objects/Share_Log__c/fields/Share_Object__c.field-meta.xml
<CustomField>
    <fullName>Share_Object__c</fullName>
    <label>共享对象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>