force-app/main/default/objects/Share_Log__c/fields/Share_Time__c.field-meta.xml
<CustomField>
    <fullName>Share_Time__c</fullName>
    <label>时间</label>
    <type>DateTime</type>
</CustomField>